Swagger 설정추가, board save 추가

--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,2 +1,7 @@
 database.username=root
 database.password=1234
+
+# Swagger??
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.security.user.name=spring
+spring.security.user.password=spring
